// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationPage.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .c0 {
    padding-left: 64px;
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`ConfigurationPage.styles Image DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 377px;
  height: 377px;
  box-sizing: border-box;
}

.c1 {
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: auto;
  cursor: default;
  transform: rotate(0deg);
}

<div>
  <div
    class="c0 "
    data-testid="container-image"
  >
    <img
      class="c1"
      data-testid="img"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`ConfigurationPage.styles Title DEVE ser igual ao snapshot QUANDO $backgroundblack for false 1`] = `
.c0 {
  font-size: 14px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: uppercase;
  cursor: default;
}

<div>
  <h3
    class="c0 "
    color="#ffffff"
    cursor="default"
  />
</div>
`;

exports[`ConfigurationPage.styles Title DEVE ser igual ao snapshot QUANDO $backgroundblack for true 1`] = `
.c0 {
  font-size: 14px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  font-weight: normal;
  text-transform: uppercase;
  cursor: default;
}

<div>
  <h3
    class="c0 "
    color="#000000"
    cursor="default"
  />
</div>
`;
